--- a/index.html
+++ b/index.html
@@ -2,21 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resellers Radar Landing Pages</title>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JMQ0H3LJ2N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
 
-  gtag('config', 'G-JMQ0H3LJ2N');
-</script>
+    <title>Resellers Radar - AI-Powered Anything Appraisal</title>
+    <meta name="description" content="Snap the pic. Nail the price. Get instant AI-powered appraisals for any item you photograph. Find hidden treasures at garage, thrift, and estate sales.">
+    <link rel="canonical" href="https://b2c.resellersradar.com/">
+
+    <!-- Favicons -->
+<link rel="icon" href="/favicon.ico?v=2" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2" />
+<link rel="manifest" href="/site.webmanifest" />
+<meta name="theme-color" content="#102A43" />
+
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://b2c.resellersradar.com/">
+    <meta property="og:title" content="Resellers Radar — AI-Powered Anything Appraisal">
+    <meta property="og:description" content="Snap the pic. Nail the price. Get instant AI-powered appraisals for any item you photograph.">
+    <meta property="og:image" content="https://b2c.resellersradar.com/og.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Resellers Radar — AI-Powered Anything Appraisal">
+    <meta name="twitter:description" content="Snap the pic. Nail the price. Instant AI-powered appraisals for anything you photograph.">
+    <meta name="twitter:image" content="https://b2c.resellersradar.com/og.png">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JMQ0H3LJ2N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-JMQ0H3LJ2N');
+    </script>
   </head>
   <body>
     <div id="root"></div>
+    <!-- IMPORTANT: absolute path; Vite transforms TSX in dev -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
